[package]
name = "phil-opp-rust-os"
version = "0.1.0"
authors = ["Nikhil Soni <krsoninikhil@gmail.com>"]
edition = "2018"

[dependencies]
bootloader = "0.3.12"  # allow bootloader to load our kernel

[package.metadata.bootimage]
default-target = "target-triple.json"

# following is covered in target file
# [profile.dev]
# panic = "abort"  # disable stack unwinding on panic

# [profile.release]
# panic = "abort"  # disable stack unwinding on panic
