[package]
name = "phil-opp-rust-os"
version = "0.1.0"
authors = ["Nikhil Soni <krsoninikhil@gmail.com>"]
edition = "2018"

[dependencies]
bootloader = "0.3.12"  # allow bootloader to load our kernel
volatile = "0.2.3"  # to specify memory read write as volatile
spin = "0.4.9"  # provides spinlock

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
default-target = "target-triple.json"

[dev-dependencies]
array-init = "0.0.3"

# following is covered in target file
# [profile.dev]
# panic = "abort"  # disable stack unwinding on panic

# [profile.release]
# panic = "abort"  # disable stack unwinding on panic
